gke-gclb-misc/tlsroute/passthrough-rxlb.yaml
# SNI-Based routing via gke-l7-regional-external-managed using tls mode passthrough https://gateway-api.sigs.k8s.io/reference/api-types/tlsroute/
# requires: kubectl apply -f https://github.com/gbrayut/cloud-examples/raw/refs/heads/main/gke-gclb-misc/caddy.yaml 
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: caddy-rxlb
  namespace: caddy
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  # Best to use non-overlapping hostnames when sharing a listener port or omit hostname for an Empty listener. Note: Gateway spec limits to 64 listeners
  - name: tls-precise
    protocol: TLS
    hostname: "caddy.example.com"
    port: 443
    tls:
      mode: Passthrough
  - name: tls-precise2
    protocol: TLS
    hostname: "www.example.com"
    port: 443
    tls:
      mode: Passthrough
  - name: tls-wildcard  # using *.example.net is fine, but *.example.com would conflict with above
    protocol: TLS
    hostname: "*.example.net"
    port: 443
    tls:
      mode: Passthrough
  - name: tls-apex  # domain apex is distinct from the subdomain level wildcard entry
    protocol: TLS
    hostname: "example.net"
    port: 443
    tls:
      mode: Passthrough
  - name: tls-empty  # dedicated port with no hostname will accept all tlsroute assigned hostnames (which still should not be overlapping)
    protocol: TLS
    port: 8443
    tls:
      mode: Passthrough
---
# SNI based routing. In this case all the hostnames map to a single backend. For multiple backends, use multiple TLSRoute resources with non-overlapping hostnames (see rilb example).
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: caddy-rxlb-route
  namespace: caddy
spec:
  parentRefs:
  - name: caddy-rxlb
    # Best practice is to attach tlsroute to a specific listener to prevent unwanted cascading behavior. But in this demo all domains route to the same shared caddy service.
    #sectionName: tls-precise
  hostnames:
  - "caddy.example.com"
  - "www.example.com"
  - "*.example.net"
  - "example.net"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: caddy
      port: 443

# Testing External LB
#  RXLB_IP=$(kubectl get -n caddy gateway/caddy-rxlb -o jsonpath='{.status.addresses[0].value}')
#  curl -vsk --resolve caddy.example.com:443:$RXLB_IP https://caddy.example.com
#  curl -vsk --resolve www.example.com:443:$RXLB_IP https://www.example.com
#  curl -vsk --resolve anything.example.net:443:$RXLB_IP https://anything.example.net
#  curl -vsk --resolve example.net:443:$RXLB_IP https://example.net
# all the above also work on port 8443 since the tlsroute doesn't specify a sectionName restriction for the parentRefs gateway
#  curl -vsk --resolve example.org:8443:$RXLB_IP https://example.org:8443   # would work if tlsroute and caddyfile was configured to use that (or any other) domain
#  
#  kubectl logs -n caddy deploy/caddy caddy -f
